--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shaon css websit</title>
+    <title>shaon css website</title>
     <link rel="shortcut icon" href="https://www.sas.com/en/news/media-gallery/all-images/sas-logo-white-reversed-new/_jcr_content/par/image_360101046.img.png/1639774080219.png" type="image/x-icon">
     <link rel="stylesheet" href="style css/main.css">
 </head>
